2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Added a short cut key, alt+space to go to next unread channel.
	Added a short cut key, alt+shift+space to go to previous unread channel.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Added an option, no action when pushed tab key.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Added workaround for WebKit on Leopard.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Released 0.6.
	Fixed a bug, NSPopupButton should be stored as int.
	Fixed a bug, address detection method maybe not applied sometimes.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Changed captions on general tab, peferences dialog.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Added nick completion settings to preferences dialog.
	Added ib_mapped_radio_outlet to DialogHelper.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Implemented nick completion.
	Added NSRange utility functions.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, channel members go missing in the member list when they change their nicks to identical ones.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Changed conditions for enabling disconnect and cancel reconnecting menus.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Tweaked boxed types.

2007-07-23  Satoshi Nakagawa <artension@gmail.com>

	Released 0.5.
	Fixed a bug, talk messages are not printed in talk frames.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Released 0.4.
	Added GPL.txt to dmg.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Added options of connect, disconnect, join and leave on double click.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to ensure server dialogs and channel dialogs are in visibleRect of the screen.
	Added utility functions to NSRect, NSSize and NSPoint.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to place server dialogs and channel dialogs in center of the main window.
